deploy/kong/kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: kong
  labels:
    app: gateway
    type: back-end
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      name: gateway-deployment
      namespace: kong
      labels:
        name: kong-deployment
        app: gateway
        type: back-end
    spec:
      containers:
        - name: gateway-container
          image: kong/kong-gateway:3.6
          imagePullPolicy: IfNotPresent
          ports:
            - name: proxy
              protocol: TCP
              containerPort: 8000
            - name: proxy-ssl
              protocol: TCP
              containerPort: 8443
            - name: admin
              protocol: TCP
              containerPort: 8001
            - name: admin-ssl
              protocol: TCP
              containerPort: 8444
            - name: kong-gui
              protocol: TCP
              containerPort: 8002
            - name: kong-gui-ssl
              protocol: TCP
              containerPort: 8445
          volumeMounts:
            - name: kong-plugins-volume
              mountPath: /kong/plugins/ps-authorize
          command: ["/bin/sh", "-c", "kong migrations bootstrap && kong migrations up && kong migrations finish && kong start --vv && tail -f /dev/null"]
      volumes:
        - name: kong-plugins-volume
          configMap:
            name: kong-plugins
