deploy/kong/kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: kong
  labels:
    app: gateway
    type: back-end
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - name: proxy
      port: 8000
      targetPort: 8000
      nodePort: 32000
    - name: proxy-ssl
      port: 8443
      targetPort: 8443
      nodePort: 32443
    - name: admin-api
      port: 8001
      targetPort: 8001
      nodePort: 32001
    - name: admin-api-ssl
      port: 8444
      targetPort: 8444
      nodePort: 32444
    - name: kong-gui
      port: 8002
      targetPort: 8002
      nodePort: 32002
    - name: kong-gui-ssl
      port: 8445
      targetPort: 8445
      nodePort: 32445
