deploy/kong/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-postgres-service
  namespace: kong
  labels:
    app: gateway-postgres
    type: back-end
spec:
  selector:
    app: gateway-postgres
  ports:
  - port: 5432
    targetPort: 5432
